<resources>
    <string name="app_name">Converter</string>

    <string name="txtLanguage">Language</string>

    <string name="meter">Meters</string>

    <string name="kilometer">Kilometers</string>

    <string name="centimeter">Centimeters</string>

    <string name="foot">Foots</string>

    <string name="mile">Miles</string>

    <string name="inch">Inches</string>

    <string name="toast">Language changed to English.</string>

</resources>
