<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp">

        <TextView
            android:id="@+id/txtLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/txtLanguage"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinnerLanguage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButtonMeter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onChecked"
            android:text="@string/meter"
            android:textColor="#000000"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/radioButtonKilometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onChecked"
            android:text="@string/kilometer"
            android:textColor="#000000"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/radioButtonCentimeter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onChecked"
            android:text="@string/centimeter"
            android:textColor="#000000"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/radioButtonFoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onChecked"
            android:text="@string/foot"
            android:textColor="#000000"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/radioButtonMile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onChecked"
            android:text="@string/mile"
            android:textColor="#000000"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/radioButtonInch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onChecked"
            android:text="@string/inch"
            android:textColor="#000000"
            android:textSize="22sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMeter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meter"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textViewMeterValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textColor="#000000"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewKilometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kilometer"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textViewKilometerValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textColor="#000000"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCentimeter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/centimeter"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textViewCentimeterValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textColor="#000000"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFoot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/foot"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textViewFootValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textColor="#000000"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mile"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textViewMileValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textColor="#000000"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewInch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/inch"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textViewInchValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textColor="#000000"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>